@@ -18,3 +18,4 @@ Fix the naked style to support content that needs to be rendered.
 #958072: Fix panels_node_node_access to not throw warnings on menu access tests.
 #965286: Panel node update was trying to use db_insert() instead of db_update().
 #964334: Panels breaks views' row styles with the panels fields style.
+#941802: Fix radio layout butotn.
